<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">SGU</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_reload">Reload</string>
    <string name="action_show_player">Show player</string>
    <string name="ok">Ok</string>
    <string name="not_available">N/A</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="mb">Mb</string>
    <string name="play_again">Play again</string>
    <string name="play">Play</string>
    <string name="play_new">Play new!</string>
    <string name="pause">Pause</string>
    <string name="hide">Hide</string>
    <string name="stop">Stop</string>
    <string name="image_card_thumbnail">Card thumbnail</string>
    <string name="image_card_shadow">Card shadow</string>
    <string name="title_section3">Section 3</string>
    <string name="see_more">See more</string>
    
    <string name="backdrop">Backdrop</string>
    
    <!-- No details -->
    <string name="no_details_title">No details</string>
    <string name="no_details_message">This episode does not have any details.</string>
    
    <!-- Low memory error -->
    <string name="closing_low_memory_ticker">Low memory, closing player</string>
    <string name="closing_low_memory_title">Low memory</string>
    <string name="closing_low_memory_text">Phone is low on memory, closing player</string>
    
    <!-- Download error -->
    <string name="download_error_ticker">Error getting podcast data</string>
    <string name="download_error_title">Error</string>
    <string name="download_error_text">Check user/pass. Try again later.</string>
    
    <!-- Download new -->
    <string name="download_new_ticker">Downloading new content</string>
    <string name="download_new_title">New SGU content</string>
    <string name="download_new_text">Downloading new SGU content</string>
    
    <!-- Send feedback -->
    <string name="send_feedback_subject">Feedback SGU (Unofficial)</string>
    <string name="send_feedback_message"></string>
    
    <!-- About -->
    <string name="sgu_title">SGU &#8211; An unofficial podcast player</string>
    <string name="sgu_description">The Skeptics\' Guide to the Universe is a weekly Podcast talkshow discussing the latest news and topics from the world of the paranormal, fringe science, and controversial claims from a scientific point of view. -The Skeptics\' Guide to the Universe: Your escape to reality -Produced by the New England Skeptical Society in association with the James Randi Educational Foundation(JREF)</string>
    <string name="version">Version %s</string>
    <string name="made_by">Made by Mike and Petrus</string>
    <string name="made_by_email">mike@slide.se</string>
    <string name="made_by_www">www.slide.se</string>
    
    <!-- Image descriptions -->
    <string name="desc_play_button">Play button</string>
    <string name="desc_show_sections">Show sections</string>
    
    <!-- Section dummy string -->
    <string name="section_number">42</string>
    <string name="section_title">Section dummy title</string>
    <string name="section_start">1:23</string>
    
    <!-- Nothing to play, no content -->
    <string name="no_content_playinfo">Nothing is currently playing. Please select something from the list.</string>
    <string name="no_content_getting_started">&lt;h1&gt;Hello!&lt;/h1&gt; 1. Setup username and password in settings&lt;br /&gt;2. Click the refresh button&lt;br /&gt;3. Done!&lt;br /&gt;&lt;br /&gt;Happy listening!</string>
    <string name="no_content_getting_started_no_html">Hello! Setup username and password in settings, then come back here and click the refresh button. Happy listening!</string>
    <string name="no_content_no_episodes">&lt;h1&gt;It\'s empty...&lt;/h1&gt; If you have setup your username and password and clicked refresh the app will download the list of episodes. This may take a couple of minutes depending on your data connection.&lt;br /&gt;&lt;br /&gt;If you\'re still getting this message go back and make sure your username and password is correct.</string>
    
    <!-- Tabs -->
    <string name="tab_adfree">Ad Free</string>
    <string name="tab_premium">Premium</string>
    
    <string name="tab_details">Details</string>
    <string name="tab_transcript">Transcript</string>
    <string name="tab_links">Links</string>

    <!-- Section headers -->
    <string name="section_header_hosts">Hosts</string>
    <string name="section_header_quote">Skeptical Quote of the Week</string>
    <string name="section_header_science_or_fiction">Science or Fiction</string>
    <string name="section_header_noisy">Who\'s That Noisy</string>
    <string name="section_header_sections">Sections</string>
    
</resources>
